@@ -183,9 +183,8 @@ handle_moveoutput(Client &client, Request request, Response &response)
 			existing_output->ReplaceDummy(output->Steal(),
 						      was_enabled);
 		else
-			/* add it to the output list */
-			dest_partition.outputs.Add(output->Steal(),
-						   was_enabled);
+			/* copy the AudioOutputControl and add it to the output list */
+			dest_partition.outputs.AddCopy(output,was_enabled);
 
 		instance.EmitIdle(IDLE_OUTPUT);
 		return CommandResult::OK;
